# Exo_Skryer

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  environment_gpu.yml  mkdocs.yml  pyproject.toml  tox.ini
FastChem/: Generate_FastChem_grid.py
NASA9/: SiH4.txt  SiS.txt
docs/: Makefile  conf.py  getting-started.md  index.md  index.rst  requirements-docs.txt
docs/exo_skryer/: RT_alb.rst  RT_em.rst  RT_trans.rst  api.rst  ck_mix_PRAS.rst  ck_mix_RORR.rst  ck_mix_TRANS.rst  dace_tools.rst  gettingstarted.rst  install.rst  (+17 more)
exo_skryer/: RT_alb_1D.py  RT_em_1D.py  RT_em_1D_ck.py  RT_em_1D_lbl.py  RT_em_1D_os.py  RT_em_schemes.py  RT_trans_1D.py  RT_trans_1D_ck.py  RT_trans_1D_ck_trans.py  RT_trans_1D_lbl.py  RT_trans_1D_os.py  RT_trans_1_5D_ck.py  RT_trans_1_5D_ck_trans.py  RT_trans_1_5D_os.py  RT_trans_2D_ck.py  RT_trans_2D_ck_trans.py  RT_trans_2D_os.py  __init__.py  aux_functions.py  aux_funtions.py  build_chem.py  build_model.py  build_model_1_5D.py  build_model_2D.py  build_opacities.py  build_prepared.py  chem_easychem_short_jax.py  chem_equilibrium_jax.py  chem_fastchem_grid_jax.py  ck_mix_PRAS.py  ck_mix_RORR.py  data_constants.py  help_io.py  help_print.py  help_runtime.py  instru_convolve.py  kernel_registry.py  kk_schemes.py  limb_asymmetry.py  lxmie_mod.py  (+34 more)
obs_data/: 1_table_WASP-107-b-Welbanks-et-al.-2024.tsv  1_table_WASP-69-b-Schlawin-et-al.-2024.tsv  2_table_WASP-107-b-Welbanks-et-al.-2024.tsv  2_table_WASP-69-b-Schlawin-et-al.-2024.tsv  3_table_WASP-107-b-Welbanks-et-al.-2024.tsv  4_table_WASP-107-b-Welbanks-et-al.-2024.tsv  5_table_WASP-107-b-Welbanks-et-al.-2024.tsv  Gliese_229B_emission.txt  Gliese_229B_emission_original.txt  HD189733b_JWST_trans.txt  HD189733b_transmission_Sing2016.txt  HD209458b_transmission_Sing2016.txt  VHS1256b_observed_data.txt  W107b_exoTEDRF_NIRISS_SOSS_O1.txt  W107b_exoTEDRF_NIRISS_SOSS_O2.txt  WASP-107b_JWST.txt  WASP-107b_JWST_trans.txt  WASP-107b_JWST_trans_2.txt  WASP-107b_JWST_trans_3.txt  WASP-17b_JWST.txt  WASP-39b_JWST_evening_east.txt  WASP-39b_JWST_morning_west.txt  WASP-69b_emission_JWST.txt  WASP-80b_JWST_em_1.txt  WASP_39b_east_west.txt  combine_WASP80b.py  convert_gliese_229b_final.py  convert_vhs1256b.py  convert_wasp107b.py  convert_wasp69b.py  plot_gliese_229b.py  twa27b_JWST_em.txt
src_ori/: RT_em_1D.py  RT_trans_1D.py  aux_funtions.py  build_model.py  build_prepared.py  instru_convolve.py  opacity_cia.py  opacity_ck.py  opacity_cloud.py  opacity_line.py  opacity_ray.py  read_stellar.py  registry_bandpass.py  registry_cia.py  registry_ck.py  registry_cloud.py  registry_line.py  registry_ray.py  run_retrieval.py  sampler_jaxns_NS.py  sampler_numpyro_NS.py  vert_Tp.py  vert_alt.py  vert_chem.py  vert_mu.py  vert_struct.py
web_interface/: README.md  app.py
(+113 files in other folders)
