[project]
name = "Exo_Skryer"
description = "A JAX accelerated sub-stellar atmosphere retrieval code"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE", content-type = "text/plain" }
authors = [
  { name = "Elspeth K. H. Lee", email = "elspeth.lee@unibe.ch" },
]
dependencies = [
  "numpy",
  "scipy",
  "jax",
  "jaxlib",
  "jaxns",
  "numpyro",
  "arviz",
  "pyyaml",
  "optimistix",
  "distrax",
  "tensorflow-probability",
  "dynesty",
  "matplotlib",
  "h5py",
  "tqdm",
  "seaborn",
  "corner",
]
dynamic = ["version"]

[project.scripts]
exo-skryer = "exo_skryer.run_retrieval:main"

[project.optional-dependencies]
gpu = [
    "jax[cuda12_pip]",
]
blackjax = [
    "blackjax",
]
anesthetic = [
    "anesthetic",
]
ultranest = [
    "ultranest",
]
pymultinest = [
    "pymultinest",
]
polychord = [
    "pypolychord",
]
all-samplers = [
    "blackjax",
    "ultranest",
    "pymultinest",
    "pypolychord",
]
test = [
    "pytest-doctestplus",
    "pytest",
    "tox",
]
docs = [
    "sphinx",
    "sphinx_astropy",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
    "sphinx-astropy[confv2]",
    "sphinx-book-theme",
    "sphinx-toolbox",
    "IPython",
    "tox",
    "blackjax",
    "anesthetic",
    "ultranest",
    "pymultinest",
]

[project.urls]
repository = "https://github.com/ELeeAstro/Exo_Skryer"

[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "exo_skryer/version.py"

[tool.pytest.ini_options]
testpaths = [
  "exo_skryer",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "exo_skryer/conftest.py",
 "exo_skryer/*setup_package*",
 "exo_skryer/tests/*",
 "exo_skryer/*/tests/*",
 "exo_skryer/extern/*",
 "exo_skryer/version*",
 "*/exo_skryer/conftest.py",
 "*/exo_skryer/*setup_package*",
 "*/exo_skryer/tests/*",
 "*/exo_skryer/*/tests/*",
 "*/exo_skryer/extern/*",
 "*/exo_skryer/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]
